[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/tileset.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/player/Weapon.gd" type="Script" id=3]
[ext_resource path="res://scenes/player/SoulBlade.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.38548, 6.84602 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.62907, 2.71776 )

[sub_resource type="Animation" id=3]
resource_name = "stab"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 0 ), Vector2( 20, 0 ), Vector2( 12, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15.7684, 4.01917 )

[sub_resource type="Animation" id=5]
resource_name = "Spin"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
health = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.18511 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 48, 16, 16 )

[node name="Hand" type="Node2D" parent="."]

[node name="Weapon" type="Area2D" parent="Hand"]
position = Vector2( 12, 0 )
collision_layer = 0
collision_mask = 4
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hand/Weapon"]
position = Vector2( 4.57699, 0 )
shape = SubResource( 2 )
disabled = true

[node name="WeaponAnimator" type="AnimationPlayer" parent="Hand/Weapon"]
anims/stab = SubResource( 3 )

[node name="SpriteHolder" type="Node2D" parent="Hand/Weapon"]

[node name="Sprite" type="Sprite" parent="Hand/Weapon/SpriteHolder"]
position = Vector2( 4.57699, 0 )
rotation = 0.785397
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 16, 48, 16, 16 )

[node name="SoulBlade" type="Area2D" parent="Hand"]
visible = false
position = Vector2( 12, 0 )
collision_layer = 0
collision_mask = 4
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Hand/SoulBlade"]
position = Vector2( 15.873, 9.53674e-07 )
rotation = 0.785397
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 48, 32, 32, 32 )

[node name="SoulBladeShape" type="CollisionShape2D" parent="Hand/SoulBlade"]
position = Vector2( 13.7691, 0 )
shape = SubResource( 4 )
disabled = true

[node name="SoulBladeAP" type="AnimationPlayer" parent="Hand/SoulBlade"]
anims/Spin = SubResource( 5 )

[node name="FloorCheck" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="SoulChargeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="area_entered" from="Hand/Weapon" to="Hand/Weapon" method="_on_Weapon_area_entered"]
[connection signal="body_entered" from="Hand/Weapon" to="Hand/Weapon" method="_on_Weapon_body_entered"]
[connection signal="area_entered" from="Hand/SoulBlade" to="Hand/SoulBlade" method="_on_SoulBlade_area_entered"]
[connection signal="body_entered" from="Hand/SoulBlade" to="Hand/SoulBlade" method="_on_SoulBlade_body_entered"]
[connection signal="timeout" from="SoulChargeTimer" to="." method="_on_SoulChargeTimer_timeout"]
